# YtDownload

./: .gitignore  Cargo.toml  README.md
src/: app.rs  get_OS.rs  main.rs  yt_downloader.rs
test_download_path/: INFO.md
