[package]
name = "yt_download"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.17.0"
rustube = "0.3.8"
poll-promise = { version = "0.1.0", features = ["tokio"] }
tokio = { version = "1.17.0", features = ["full"] }
rfd = "0.8.1"

[dev-dependencies]
tokio-test = "0.4.2"